# mailman

./: Cargo.toml  DEVELOPMENT.md  README.md  USAGE.md
src/: app.rs  cli.rs  config.rs  main.rs
src/gmail/: client.rs  models.rs
src/ui/: inbox.rs
