[package]
name = "mailman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
html2text = "0.13"
oauth2 = { version = "5.0", features = ["reqwest"] }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
url = "2.5"
webbrowser = "1.0"
